--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 06:05:06 2018</p>
+         Last Run: Fri Nov  2 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>73</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>5</td>
-                        <td>67</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>63</td>
+                        <td>WSW</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>3</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>56</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "2",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "0",
                  "4",
-                 "7"
+                 "6"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "5",
+                 "4",
                  "3"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "67",
+                 "81",
+                 "65",
                  "55"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "63",
-                 "56"
+                 "72",
+                 "62",
+                 "54"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 06:05:06 2018</p>
+         Last Run: Fri Nov  2 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -251,7 +251,7 @@
                         <td>7</td>
                         <td>50</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
                         <td>88</td>
                      </tr>
@@ -272,12 +272,12 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>21</td>
-                        <td>44</td>
+                        <td>20</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -377,7 +377,7 @@
                "data":[
                  "7",
                  "9",
-                 "21"
+                 "20"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "50",
                  "46",
-                 "44"
+                 "43"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "88",
                  "79",
-                 "74"
+                 "75"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 06:05:06 2018</p>
+         Last Run: Fri Nov  2 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>41</td>
-                        <td>78</td>
+                        <td>43</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -476,7 +476,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>40</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -487,8 +487,8 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>40</td>
-                        <td>81</td>
+                        <td>36</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "41",
+                 "43",
                  "40",
-                 "40"
+                 "36"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
                  "79",
-                 "81"
+                 "80",
+                 "82"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 06:05:06 2018</p>
+         Last Run: Fri Nov  2 07:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,8 +678,8 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>23</td>
-                        <td>72</td>
+                        <td>12</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
@@ -690,8 +690,8 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>23</td>
-                        <td>72</td>
+                        <td>12</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
@@ -702,8 +702,8 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>22</td>
-                        <td>73</td>
+                        <td>6</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
-                 "23",
-                 "22"
+                 "12",
+                 "12",
+                 "6"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "72",
-                 "73"
+                 "71",
+                 "71",
+                 "72"
                ]
              },
              {
