--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 09:05:03 2018</p>
+         Last Run: Fri Nov  2 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>71</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>4</td>
-                        <td>64</td>
+                        <td>5</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>63</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>56</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-2",
                  "2",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "4",
-                 "7"
+                 "6"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "4",
+                 "5",
                  "3"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "64",
-                 "54"
+                 "81",
+                 "67",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "63",
-                 "56"
+                 "74",
+                 "67",
+                 "51"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 09:05:03 2018</p>
+         Last Run: Fri Nov  2 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,23 +249,23 @@
                         <td>8</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>52</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>89</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>13</td>
-                        <td>48</td>
+                        <td>12</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>24</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>75</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "11",
-                 "13",
+                 "12",
                  "24"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "48",
-                 "45"
+                 "55",
+                 "50",
+                 "46"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "79",
-                 "75"
+                 "87",
+                 "80",
+                 "72"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 09:05:03 2018</p>
+         Last Run: Fri Nov  2 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>39</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -603,7 +603,7 @@
                "data":[
                  "81",
                  "82",
-                 "82"
+                 "83"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 09:05:03 2018</p>
+         Last Run: Fri Nov  2 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,7 +678,7 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>12</td>
+                        <td>14</td>
                         <td>74</td>
                         <td>0</td>
                         <td>6</td>
@@ -690,7 +690,7 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>12</td>
+                        <td>14</td>
                         <td>75</td>
                         <td>0</td>
                         <td>6</td>
@@ -703,7 +703,7 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>6</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "12",
+                 "14",
+                 "14",
                  "6"
                ]
              },
@@ -818,7 +818,7 @@
                "data":[
                  "74",
                  "75",
-                 "75"
+                 "76"
                ]
              },
              {
