--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 12:05:03 2018</p>
+         Last Run: Fri Nov  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>5</td>
                         <td>68</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>66</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>55</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>52</td>
+                        <td>SW</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "2",
+                 "0",
                  "4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "4",
+                 "3",
                  "6"
                ]
              }
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "68",
                  "55"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
                  "66",
-                 "52"
+                 "63",
+                 "49"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 12:05:03 2018</p>
+         Last Run: Fri Nov  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,22 +246,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>11</td>
-                        <td>55</td>
+                        <td>7</td>
+                        <td>5</td>
+                        <td>24</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>87</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>12</td>
-                        <td>49</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>19</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
@@ -272,7 +272,7 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>24</td>
+                        <td>22</td>
                         <td>46</td>
                         <td>1</td>
                         <td>13</td>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "5",
                  "6",
-                 "9",
                  "9"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "7",
                  "8",
-                 "9",
                  "9"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "12",
-                 "24"
+                 "24",
+                 "19",
+                 "22"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "49",
+                 "56",
+                 "50",
                  "46"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
+                 "88",
                  "80",
                  "72"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 12:05:03 2018</p>
+         Last Run: Fri Nov  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>40</td>
+                        <td>45</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>38</td>
-                        <td>83</td>
+                        <td>42</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>98</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "38",
-                 "39"
+                 "45",
+                 "42",
+                 "41"
                ]
              },
              {
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "83",
+                 "82",
                  "83"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
-                 "94"
+                 "98",
+                 "98",
+                 "98"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 12:05:03 2018</p>
+         Last Run: Fri Nov  2 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
-                        <td>14</td>
-                        <td>75</td>
+                        <td>Clear</td>
+                        <td>-8</td>
+                        <td>-12</td>
+                        <td>5</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WSW</td>
-                        <td>37</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
-                        <td>14</td>
-                        <td>76</td>
+                        <td>Clear</td>
+                        <td>-8</td>
+                        <td>-12</td>
+                        <td>5</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WNW</td>
-                        <td>37</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-10</td>
-                        <td>6</td>
-                        <td>76</td>
+                        <td>Clear</td>
+                        <td>-8</td>
+                        <td>-12</td>
+                        <td>4</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WNW</td>
-                        <td>37</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
-                 "-9",
-                 "-10"
+                 "-12",
+                 "-12",
+                 "-12"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
-                 "-6",
-                 "-7"
+                 "-8",
+                 "-8",
+                 "-8"
                ]
              }
            ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
-                 "14",
-                 "6"
+                 "5",
+                 "5",
+                 "4"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "76",
-                 "76"
+                 "73",
+                 "70",
+                 "70"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "37",
-                 "37"
+                 "7",
+                 "7",
+                 "7"
                ]
              }
            ]
